--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+/public/.DS_Store
 /public/packs
 /public/packs-test
 /node_modules
